# play.cpp11

./: .gitignore  INSTALL  Makefile.am  README  configure.ac  dummy.cc
src/cpp11/: consumer.cc  consumer.h  cpp11.cc  cpp11.h  factorial.cc  factorial.h  literals.cc  literals.h  mysort.cc  mysort.h  myvector.cc  myvector.h  threading.cc  threading.h
test/: cpp11test.cc  literalstest.cc  mysorttest.cc  myvectortest.cc  randomtest.cc  testrunner.cc
